# embeddeduse

./: .gitignore
BlogPosts/: .gitignore
BlogPosts/ByteArrayToUint32/: ByteArrayToUint32.pro  TestByteArrayToUint32.cpp
BlogPosts/CMakeToolchainFile/: toolchain-imx6.cmake
BlogPosts/CanComm/: CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.22  CMakeLists.txt.user.4.8-pre1  notes.txt
BlogPosts/CanComm/canbus/: CMakeLists.txt  main.cpp  mockcanbackend.cpp  mockcanbackend.h  mocksocketcandevice.cpp  mocksocketcandevice.h  plugin.json
BlogPosts/CanComm/canbusext/: CMakeLists.txt  canbusext.h  j1939_broadcast_frames.cpp  j1939_broadcast_frames.h  j1939_frame.cpp  j1939_frame.h
BlogPosts/CanComm/ecu/: CMakeLists.txt  cansimulator.cpp  cansimulator.h  ecu.cpp  ecu.h  ecumodel.cpp  ecumodel.h  main.cpp  main.qml
BlogPosts/CanComm/ecucan/: CMakeLists.txt  can_frame_cache.cpp  can_frame_cache.h  canbus.cpp  canbus.h  canbusrouter.cpp  canbusrouter.h  ecubase.cpp  ecubase.h  received_frames_cache.cpp  received_frames_cache.h
BlogPosts/CanComm/mockcanutils/: CMakeLists.txt  mockcanbusrouter.cpp  mockcanbusrouter.h  mockcanutils.h
BlogPosts/CanComm/terminal/: CMakeLists.txt  body_controller_proxy.cpp  body_controller_proxy.h  cansimulator.cpp  cansimulator.h  ecuproxy.cpp  ecuproxy.h  main.cpp  main.qml  terminalmodel.cpp  terminalmodel.h  transmission_proxy.cpp  transmission_proxy.h
BlogPosts/CanComm/test/: CMakeLists.txt
BlogPosts/CanComm/test/test_connect_to_mock_can_bus/: CMakeLists.txt  test_connect_to_mock_can_bus.cpp
BlogPosts/CanComm/test/test_j1939_frames/: CMakeLists.txt  test_j1939_frames.cpp
BlogPosts/CanComm/test/test_mock_can_frames/: CMakeLists.txt  test_mock_can_frames.cpp
BlogPosts/CanComm/test/test_read_write_on_mock_can_bus/: CMakeLists.txt  test_read_write_on_mock_can_bus.cpp
BlogPosts/CanComm/test/test_receive_frames_from_two_ecus/: CMakeLists.txt  test_receive_frames_from_two_ecus.cpp
BlogPosts/CanComm/test/test_write_buffer_overflow/: CMakeLists.txt  test_write_buffer_overflow.cpp
BlogPosts/CanComm/test/testmockcanbus/: CMakeLists.txt  testmockcanbus.cpp
BlogPosts/ComparingFloats/: compare_floats.pro  test_compare_floats.cpp
BlogPosts/ConnectingLambdasToSingleShots/: Model.h  main.qml
BlogPosts/ControlsWithCustomStyle/: ControlsWithCustomStyle.pro  Notes.txt
BlogPosts/ControlsWithCustomStyle/Main/: Main.pro  main.cpp  main.qml  qml.qrc
BlogPosts/ControlsWithCustomStyle/RiverStyle/: RiverStyle.pro  riverstyle.cpp  riverstyle.h  riverstyleplugin.cpp
BlogPosts/DynamicLanguageSwitchQml/: DynamicLanguageSwitchQml.pro  Settings.cpp  Settings.h  language_de.ts  language_en.ts  main.cpp  main.qml  qml.qrc
BlogPosts/EmittingSignalsInConstructorsOrDestructors/: EmittingSignalsInConstructorsOrDestructors.pro  Model.cpp  Model.h  SecondScreen.qml  qml.qrc
BlogPosts/EnumsQmlCpp/: EnumsQmlCpp.pro  main.cpp  main.qml  mainmodel.h  qmlenums.h
BlogPosts/Graphics/: EmittingSignalsInCtorsDtors.pptx  SingleShotAndLambda.pptx
BlogPosts/LifetimeIssuesWithQtSignals/: Customer.h  CustomerInfo.qml  LifetimeIssuesWithQtSignals.pro  Model.h  SecondScreen.qml  main.cpp  main.qml  qml.qrc
BlogPosts/OwnershipTransferFromCppToQml/: CMakeLists.txt  Customer.h  CustomerInfo.qml  CustomerManager.h  OwnershipTransferFromCppToQml.pro  asan-trace.txt  main.cpp  main.qml
BlogPosts/ParameterisedSignals/: ParameterisedSignals.pro  PointToPointSignalMapper.cpp  PointToPointSignalMapper.h  Receiver1.cpp  Receiver1.h  Receiver2.cpp  Receiver2.h  Receiver3.cpp  Receiver3.h  Sender1.cpp  Sender1.h  Sender2.cpp  Sender2.h  Sender3.cpp  Sender3.h  TestParameterisedSignals.cpp  TestParameterisedSignals.h
BlogPosts/PimplForDerivedClasses/: CMakeLists.txt  interpreter.cpp  interpreter.h  interpreter_impl.h  main.cpp  xxl_interpreter.cpp  xxl_interpreter.h  xxl_interpreter_impl.h
BlogPosts/QComparePrint/: Person.h  QComparePrint.pro  TestPerson.cpp  TestPerson.h
BlogPosts/RelocatableQt/: CMakeLists.txt  Customer.h  CustomerInfo.qml  CustomerManager.h  Dockerfile  main.qml
BlogPosts/SignalsSlotsInCpp/: CMakeLists.txt  ClimateEcuTwin.cpp  ClimateEcuTwin.h  ClimateModel.cpp  ClimateModel.h  main.cpp
BlogPosts/SignalsSlotsInCpp/cpp/: ClimateEcuTwin.cpp  ClimateModel.cpp  ClimateModel.h  main.cpp
BlogPosts/SignalsSlotsInCpp/qt/: CMakeLists.txt  ClimateEcuTwin.cpp  ClimateEcuTwin.h  ClimateModel.cpp  ClimateModel.h  IoTClient.cpp  IoTClient.h  main.cpp
BlogPosts/SignalsSlotsInCpp/tight-cpp/: CMakeLists.txt  ClimateEcuTwin.cpp  ClimateEcuTwin.h  ClimateModel.cpp  ClimateModel.h  IoTClient.cpp  IoTClient.h  main.cpp
BlogPosts/TDDonClassesWithFileIO/: CMakeLists.txt
BlogPosts/TDDonClassesWithFileIO/sources/: abstract_text_file.h  package_info.cpp  package_info.h  package_scanner.cpp  package_scanner.h  text_file.cpp  text_file.h
BlogPosts/TDDonClassesWithFileIO/tests/: CMakeLists.txt
BlogPosts/TDDonClassesWithFileIO/tests/doubles/: fake_text_file.cpp  fake_text_file.h
BlogPosts/TDDonClassesWithFileIO/tests/package_scanner_with_file_io/: CMakeLists.txt  test_package_scanner_with_file_io.cpp
BlogPosts/TDDonClassesWithFileIO/tests/package_scanner_with_file_io/files/libffi/: recipeinfo
BlogPosts/TDDonClassesWithFileIO/tests/package_scanner_without_file_io/: CMakeLists.txt  file_system_double.h  test_package_scanner_without_file_io.cpp
BlogPosts/WaylandCompositors/: WaylandCompositors.pro
BlogPosts/WaylandCompositors/ClientApp/: main.cpp  main.qml
BlogPosts/WaylandCompositors/Common/: Application.h  ApplicationManager.rep  ApplicationManagerService.rep  ApplicationService.rep
BlogPosts/WaylandCompositors/Compositor/: ApplicationItem.qml  ApplicationManager.cpp  ApplicationManager.h  (+15 more)
BlogPosts/docker-private-repos/: Dockerfile  build-container.py  container-entrypoint  run-container.py
BlogPosts/qtcreator-setup/: README.md  configure-qtcreator.sh  modifiations.diff
ResponsiveQml/fileSelector/: fileSelector.pri  fileSelector.pro  fileSelector.qrc
ResponsiveQml/scaling/: scaling.pro
qtcreator-setup/: configure-qtcreator.sh
(+44 files in other folders)
